--- a/README
+++ b/README
@@ -13,9 +13,9 @@ All tweaks can be selectively applied to several different worlds.
 Versions
 --------
 
-HigherExplosives v1.5 was tested with recommended build 617 (http://ci.bukkit.org/job/dev-CraftBukkit/617/artifact/target/craftbukkit-0.0.1-SNAPSHOT.jar) and a Minecraft 1.4 client.
+HigherExplosives v1.5.1 was tested with recommended build 670 and a Minecraft 1.4_01 client.
 
-HigherExplosives v1.5 will not work on CraftBukkit versions earlier than 602.
+HigherExplosives v1.5 and 1.5.1 will not work on CraftBukkit versions earlier than 602.
 
 HigherExplosives v1.4 was tested with CraftBukkit server recommended versions up to 556 and a Minecraft 1.3_01 client.
 
@@ -29,6 +29,7 @@ Features
 - Allows configuration of different blast radii, with different probabilities for each being chosen
 - Allows configuration of different player damage (optionally with different probabilities for each being chosen)
 - Allows configuration of different creature damage (optionally with different probabilities for each being chosen)
+- Explosions can be nullified altogether (just set the blast radius to 0)
 - Some simple control over which areas the modified explosions will happen in
 
 Known Issues
@@ -218,6 +219,10 @@ If an entity has no activeBounds property then the explosion modifications will 
 
 Changelog:
 ----------
+
+Version 1.5.1
+- Works with the MiningTNT plugin. If there is no yield configuration in HigherExplosives' config.yml, the explosion's yield will be set to 1.0 (MiningTNT's default yield).
+- Events cancelled by other plugins are now not processed
 
 Version 1.5
 - Support for completely preventing terrain damage via the "preventTerrainDamage" configuration key.
